<resources>
    <string name="app_name">UTSproject</string>
    <string name="hint_username">Username</string>
    <string name="hint_password">Password</string>
    <string name="login">Login\n</string>
    <string name="register">Register Here</string>
    <string name="food_list_title">Food and Beverages</string>
    <string name="hint_confirm_password">Confirm Password</string>
    <string name="login_link">Login</string>
    <string name="add_order">Add Order</string>
    <string name="food_image_desc">Gambar makanan</string>
</resources>