<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="24dp"
    android:background="@drawable/gradient_background"
    tools:context=".RegisterActivity">

    <ImageView
        android:id="@+id/logo"
        android:layout_width="120dp"
        android:layout_height="120dp"
        android:src="@drawable/ic_launcher_foreground"
        android:layout_gravity="center_horizontal"
        android:layout_marginBottom="50dp"/>

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/hint_username"
        android:layout_marginBottom="12dp"
        app:startIconDrawable="@drawable/ic_person"
        app:boxStrokeColor="#4CAF50"
        app:boxBackgroundColor="#FAFAFA"
        android:paddingHorizontal="16dp">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/etUsername"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="12dp"
            android:inputType="text"/>
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/hint_password"
        android:layout_marginBottom="12dp"
        app:startIconDrawable="@drawable/ic_lock"
        app:boxStrokeColor="#4CAF50"
        app:boxBackgroundColor="#FAFAFA"
        android:paddingHorizontal="16dp">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/etPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="12dp"
            android:inputType="textPassword"/>
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/hint_confirm_password"
        android:layout_marginBottom="24dp"
        app:startIconDrawable="@drawable/ic_lock"
        app:boxStrokeColor="#4CAF50"
        app:boxBackgroundColor="#FAFAFA"
        android:paddingHorizontal="16dp">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/etConfirmPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="12dp"
            android:inputType="textPassword"/>
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btnRegister"
        android:textAllCaps="false"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginHorizontal="16dp"
        android:layout_marginBottom="24dp"
        android:backgroundTint="#4CAF50"
        android:clickable="true"
        android:focusable="true"
        android:text="@string/register"
        android:textColor="@android:color/white"
        app:cornerRadius="20dp"/>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/Login"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_gravity="center"
        android:layout_marginHorizontal="16dp"
        android:layout_marginBottom="12dp"
        android:backgroundTint="#388E3C"
        android:clickable="true"
        android:focusable="true"
        android:text="@string/login_link"
        android:textAllCaps="false"
        android:textColor="@android:color/white"
        app:cornerRadius="20dp" />
</LinearLayout>
